# ghaster

./: .gitignore  AGENTS.md  pyproject.toml
devlog/: 2025-09-11.md
docs/: README.md
scripts/: build  dev  test
src/game/: main.py  physics.py
tests/physics/: test_physics.py
