[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-platformer"
version = "0.1.0"
description = "A tiny Pygame platformer"
readme = "docs/README.md"
requires-python = ">=3.9"
dependencies = [
  "pygame>=2.5",
]

[project.scripts]
mygame = "game.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

